arregle el header video

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="contains">
-        <header class="header" id="header">
+        <header class="header header__index" id="header">
             <nav class="navbar navbar-expand-lg navbar-light contains__nav">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="img/logo.svg" alt="Logo de Cosembrar" srcset="" class="nav__logo"></a>
@@ -32,7 +32,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
+                        <ul class="navbar-nav mb-2 mb-lg-0 ul__mt">
                         <li class="nav-item">
                             <a class="nav-link" id="nav__link--active" aria-current="page" href="index.html">Inicio</a>
                         </li>
@@ -64,14 +64,14 @@
                     </div>
                 </div>
             </nav>
-                <video autoplay playsinline muted loop preload poster="img/2160p.png">
+                <video autoplay playsinline muted loop preload poster="img/2160p.png" class="video__index">
                     <!-- <source src="img/2160p.webm" /> -->
                     <source src="img/2160p.mp4" />
                 </video>
-                <div class="header__title">
+                <div class="header__title__index">
                     <h1 class="colorWhite">Acopio de granos<br>Venta de Agroinsumos</h1>
                     <p class="header__subtitle colorWhite">Más de 20 años junto al productor</p>
-                    <a href="pages/contacto.html" class="action__btn">Contactanos</a>
+                    <a href="pages/contacto.html" class="btn__index">Contactanos</a>
                 </div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285 80" preserveAspectRatio="xMidYMid slice">
                     <defs>
@@ -88,15 +88,14 @@
         </header>
         <main id="main">
             <section>
-                <p class="mx-auto intro mb15">Realizamos <strong>acopio</strong> y acondicionamiento de cereales, venta de <strong>insumos agropecuarios</strong>, <strong>semillas</strong> y <strong>agroquímicos</strong>, desde hace más de 20 años, agregando valor a la cadena comercial de los agro-negocios y cumplimentando las necesidades de los productores.</p>
+                <p class="mx-auto intro">Realizamos <strong>acopio</strong> y acondicionamiento de cereales, venta de <strong>insumos agropecuarios</strong>, <strong>semillas</strong> y <strong>agroquímicos</strong>, desde hace más de 20 años, agregando valor a la cadena comercial de los agro-negocios y cumplimentando las necesidades de los productores.</p>
                 <div class="mb15 mx__5vw">
                     <div class="mb15 service__cosembrar">
                         <div class="service__cosembrar__img">
                             <img src="img/cosechaCosembrar.jpeg" alt="Grano de cereal Cosembrar" class="service__cosembrar__img--style">
-                            <!-- <div style="background-color: green, opacity: 0.40, transition: background 0.3s, border-radius 0.3s, opacity 0.3s;"></div> -->
                         </div>
                         <div class="service__cosembrar__text">
-                            <h2 class="mb-5 color--middle">Acondicionamiento y acopio de cereal</h2>
+                            <h2 class="mb__3 color--middle">Acondicionamiento y acopio de cereal</h2>
                             <p class="mb-1">Somos productores agropecuarios, por lo cual entendemos la necesidad de un buen servicio, nuestras planta cuenta con tecnología y acondicionamiento de cereal.</p>
                             <a href="pages/acopio.html" class="link__more">Descubri más sobre acopio <i class="bi bi-arrow-right-short size3"></i></a>
                         </div>
@@ -106,7 +105,7 @@
                             <img src="img/fitosanitarioCosembrar.jpeg" alt="Agroinsumo soja Cosembrar" class="service__cosembrar__img--style">
                         </div>
                         <div class="service__cosembrar__text">
-                            <h2 class="mb-5 color--middle">Agroinsumos</h2>
+                            <h2 class="mb__3 color--middle">Agroinsumos</h2>
                             <p class="mb-3">Contamos con un equipo de ingenieros agrónomos que brindan asesoramiento integral a los productores.</p>
                             <p><i class="bi bi-droplet icon__secondary"></i> <strong>Agroquímico / Fitosanitarios</strong></p>
                             <p><i class="bi bi-slash-circle icon__secondary"></i> <strong>Cereales</strong></p>
