--- a/pages/agroinsumos.html
+++ b/pages/agroinsumos.html
@@ -32,7 +32,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                        <ul class="navbar-nav mb-2 mb-lg-0">
+                        <ul class="navbar-nav mb-2 mb-lg-0 ul__mt">
                         <li class="nav-item hover--bold">
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
