Cambio Hover btn index + css mas ordenado

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="service__cosembrar__text">
                             <h2 class="mb__3 color--middle">Agroinsumos</h2>
                             <p class="mb-3">Contamos con un equipo de ingenieros agrónomos que brindan asesoramiento integral a los productores.</p>
-                            <p><i class="bi bi-droplet icon__secondary"></i> <strong>Agroquímico / Fitosanitarios</strong></p>
+                            <p><i class="bi bi-droplet icon__secondary"></i> <strong>Fitosanitarios</strong></p>
                             <p><i class="bi bi-slash-circle icon__secondary"></i> <strong>Cereales</strong></p>
                             <p><i class="bi bi-egg icon__secondary"></i> <strong>Semillas</strong></p>
                         </div>
