cambios solicitados por Lau

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <source src="img/2160p.mp4" />
                 </video>
                 <div class="header__title__index">
-                    <h1 class="colorWhite">Acopio de granos<br>Venta de Agroinsumos</h1>
-                    <p class="header__subtitle colorWhite">Más de 20 años junto al productor</p>
+                    <h1 class="colorWhite ts">Acopio de granos<br>Venta de Agroinsumos</h1>
+                    <p class="header__subtitle colorWhite ts">Más de 20 años junto al productor</p>
                     <a href="pages/contacto.html" class="btn__index">Contactanos</a>
                 </div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285 80" preserveAspectRatio="xMidYMid slice">
@@ -101,10 +101,10 @@
                         </div>
                     </div>
                     <div class="service__cosembrar">
-                        <div class="service__cosembrar__img">
+                        <div class="service__cosembrar__img order__1__phone">
                             <img src="img/fitosanitarioCosembrar.jpeg" alt="Agroinsumo soja Cosembrar" class="service__cosembrar__img--style">
                         </div>
-                        <div class="service__cosembrar__text">
+                        <div class="service__cosembrar__text order__2__phone">
                             <h2 class="mb__3 color--middle">Agroinsumos</h2>
                             <p class="mb-3">Contamos con un equipo de ingenieros agrónomos que brindan asesoramiento integral a los productores.</p>
                             <p><i class="bi bi-droplet icon__secondary"></i> <strong>Fitosanitarios</strong></p>
