--- a/pages/acopio.html
+++ b/pages/acopio.html
@@ -95,7 +95,7 @@
                         <div class="cotizacion__granos--details">
                             <p class="cotizacion__granos--details--strong">$126 </p><p>Pesos Argentinos / 1 USD</p>
                         </div>
-                        <p class="cotizacion--bank mt-3"><em>Cotización Banco Nación 10/02/2022</em></p>
+                        <p class="cotizacion--bank mt-3"><em>Cotización Dolar Divisa 10/02/2022</em></p>
                     </div>
                     <div class="cotizacion__granos">
                         <h3 class="mb__3">Granos</h3>
