--- a/pages/acopio.html
+++ b/pages/acopio.html
@@ -65,7 +65,7 @@
                 </div>
             </nav>
             <div class="position__r">
-                <img src="../img/acopioCosembrar.jpeg" alt="Acopio de Cereales Cosembrar" class="section__img" />
+                <img src="../img/acopioCosembrar.jpeg" alt="Silos, acopio de Cereales Cosembrar" class="section__img" />
                 <div class="elementor-background-overlay"></div>
             </div>
             <div class="header__title">
@@ -77,7 +77,7 @@
                 <div class="service__detail mt15 mb15">
                     <div class="service__detail__text">
                         <h1 class="mb__3">Acondicionamiento y acopio de cereal</h1>
-                        <p class="introSection mt-3 mb__3">Nuestra planta cuenta con el equipamiento de acopio, acondicionamiento y secado de granos, comprendemos y apoyamos el esfuerzo del productor.</p>
+                        <p class="introSection mt-3 mb__3">Nuestra planta cuenta con el equipamiento de <strong>acopio, acondicionamiento y secado de granos</strong>, comprendemos y apoyamos el <em>esfuerzo del productor</em>.</p>
                         <a href="pages/contacto.html" class="link__more">Contactanos <i class="bi bi-arrow-right-short size3"></i></a>
                     </div>
                     <div class="service__detail__images">
