--- a/pages/agroinsumos.html
+++ b/pages/agroinsumos.html
@@ -65,7 +65,7 @@
                 </div>
             </nav>
             <div class="position__r">
-                <img src="../img/agroinsumoCosembrar.jpeg" alt="Agroinsumos Cosembrar" class="section__img" />
+                <img src="../img/agroinsumoCosembrar.jpeg" alt="Agroinsumos, fitosanitarios Cosembrar" class="section__img" />
                 <div class="elementor-background-overlay"></div>
             </div>
             <div class="header__title">
@@ -77,18 +77,18 @@
                 <div class="service__detail mt15 mb15">
                     <div class="service__detail__text">
                         <h1 class="mb__3">Agroinsumos</h1>
-                        <p class="introSection mt-3 mb__3">Contamos con un equipo de productores e ingenieros agrónomos, brindamos asesoramiento integral, teniendo como objetivo hacer más eficiente el proceso de producción.</p>
+                        <p class="introSection mt-3 mb__3">Contamos con un equipo de productores e ingenieros agrónomos, brindamos <strong>asesoramiento integral</strong>, teniendo como objetivo hacer más eficiente el proceso de producción.</p>
                         <a href="pages/contacto.html" class="link__more">Contactanos <i class="bi bi-arrow-right-short size3"></i></a>
                     </div>
                     <div class="service__detail__images">
                         <div class="service__detail__img position__r">
-                            <img src="../img/maizAgroinsumoCosembrar.jpeg" alt="Maiz calidad Cosembrar" class="img__intro__circle">
-                            <img src="../img/loteMaizCosembrar.jpeg" alt="Lote Maiz Cosembrar" class="img__intro__rounded">
+                            <img src="../img/maizAgroinsumoCosembrar.jpeg" alt="Calidad Maiz Cosembrar" class="img__intro__circle">
+                            <img src="../img/loteMaizCosembrar.jpeg" alt="Campo Maiz Cosembrar" class="img__intro__rounded">
                         </div>
                     </div>
                 </div>
 <!-- Galeria Primeras marcas -->
-                <h2 class="text-center mb-3">Marcas representadas</h2>
+                <h2 class="text-center mb-3">Productos</h2>
                 <p class="text-center mb-5">Ponemos a tu alcance los mejores productos líderes del sector</p>
                 <div class="products mb15">
                     <div class="products__brand">
