--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -84,7 +84,7 @@
                             <p class="wow pulse animated animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">
                                 <i class="bi bi-geo-alt-fill icon__primary"></i>
                             </p>
-                            <p>Ruta 31 y Carlos Merti 1<br>San Antonio de Areco, <br>Buenos Aires, Argentina</p>
+                            <p>Ruta 31 y Carlos Merti 1<br><em>San Antonio de Areco, <br>Buenos Aires, Argentina</em></p>
                         </a>
                         <p class="map--responsive__phone"><strong>02326 45 3574</strong></p>
                     </div>
@@ -108,7 +108,7 @@
                     </div>
                     <div class="text-center mb-3 contact__content__mails">
                         <i class="bi bi-envelope mb-3 icons__contact"></i>
-                        <h3 class="contact__content__mails--title">Agroinsumos</h3>
+                        <h1 class="contact__content__mails--title style__h3">Agroinsumos</h1>
                         <a href="mailto:ezequiel@cosembrar.com.ar" class="contact__content__mails--mail">ezequiel@cosembrar.com.ar</a>
                         <br>
                         <a href="mailto:federico@cosembrar.com.ar" class="contact__content__mails--mail">federico@cosembrar.com.ar</a>
