--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Cosembrar realiza acopio y acondicionamiento de cereales, venta de insumos agropecuarios y fitosanitarios, cumplimentando las necesidades de los productores.">
-    <meta name="keywords" content="acopio, fitosanitarios, agroinsumos, agroquímicos, agropecuarios, productores, cereal, cereales, cosembrar, granos, semilla, semillas, comercial, agro, agro-negocios, negocios, productos, insumos, agroquímico, acondicionamiento, calidad, servicio, areco">
+    <meta name="keywords" content="acopio, fitosanitarios, agroinsumos, agroquímicos, agropecuarios, productores, cereal, cereales, cosembrar, granos, semilla, semillas, comercial, agro, agro-negocios, negocios, productos, insumos, agroquímico, acondicionamiento, calidad, servicio, areco, planta, silos, oficina">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar más de 20 años realizando acopio de cereales y venta de agroinsumos</title>
@@ -65,7 +65,7 @@
                 </div>
             </nav>
             <div class="position__r">
-                <img src="../img/nosotrosCosembrar.jpeg" alt="Nosotros Cosembrar" class="section__img" />
+                <img src="../img/nosotrosCosembrar.jpeg" alt="Silos Cosembrar" class="section__img" />
                 <div class="elementor-background-overlay"></div>
             </div>
             <div class="header__title">
@@ -77,14 +77,14 @@
                 <div class="mt15 mb15">
                     <div class="us">
                         <div class="us__img">
-                            <img src="../img/cosembrar.jpeg" alt="Grano de cereal Cosembrar" class="service__cosembrar__img--style">
+                            <img src="../img/cosembrar.jpeg" alt="Planta de cereal y oficina Cosembrar" class="service__cosembrar__img--style">
                         </div>
                         <div class="us__img">
                             <p class="style__h1 display__i">Más de 20 años en </p><h1 class="display__i">Acopio y venta de Agroinsumos</h1>
-                            <p class="mt__3">Cosembrar SACIFIA nace a principios de 2001, instaurada por diez socios fundadores ubicada en la localidad de San Antonio de Areco, a 113km de Ciudad Autónoma de Buenos Aires, corazón de la zona núcleo agropecuaria del país. <br><br>
-                                Desde el inicio de sus actividades realiza acopio y acondicionamiento de cereales, de los productores de la zona y alrededores, agregando valor a la cadena comercial de los agro-negocios.<br><br>
-                                Después de poco tiempo, se incorporaron la venta de insumos agropecuarios y fitosanitarios para cumplimentar las necesidades de los productores. <br><br>
-                                Buscamos la excelencia de nuestros productos y servicios, priorizando la calidad, asumiendo el compromiso con nuestros clientes de generar vínculos comerciales duraderos, basados en buenos negocios, buen servicio y el valor de la confianza.</p>
+                            <p class="mt__3">Cosembrar SACIFIA nace a principios de 2001, instaurada por diez socios fundadores ubicada en la localidad de <strong>San Antonio de Areco</strong>, a 113km de Ciudad Autónoma de Buenos Aires, corazón de la zona <strong>núcleo agropecuaria</strong> del país. <br><br>
+                                Desde el inicio de sus actividades realiza <strong>acopio y acondicionamiento de cereales</strong>, de los productores de la zona y alrededores, agregando valor a la cadena comercial de los <strong>agro-negocios</strong>.<br><br>
+                                Después de poco tiempo, se incorporaron la venta de <strong>insumos agropecuarios</strong> y <strong>fitosanitarios</strong> para cumplimentar las necesidades de los productores. <br><br>
+                                Buscamos la <strong>excelencia</strong> de nuestros productos y servicios, priorizando la <strong>calidad</strong>, asumiendo el compromiso con nuestros clientes de generar vínculos comerciales duraderos, basados en buenos negocios, buen <strong>servicio</strong> y el valor de la <strong>confianza</strong>.</p>
                         </div>
                     </div>
                 </div>
