--- a/pages/semillas.html
+++ b/pages/semillas.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Nos dedicamos al acopio y acondicionamiento de cereales, semillas, granos, oleaginosas desde hace más de veinte años, acompañando y apoyando al productor">
-    <meta name="keywords" content="Cosembrar, acopio, semillas, granos, oleaginosas, soja, maíz, sorgo, girasol, trigo, productores, planta, equipamiento, esfuerzo, productor, acondicionamiento, secado, calidad">
+    <meta name="description" content="Vendemos semillas de marcas líderes del mercado, realizamos acopio y acondicionamiento de cereales, granos, oleaginosas desde hace más de veinte años">
+    <meta name="keywords" content="Cosembrar, líderes, siembra, asesoramiento, agrónomos, ingenieros, mecado, acopio, semillas, granos, oleaginosas, soja, maíz, sorgo, girasol, trigo, productores, planta, equipamiento, esfuerzo, productor, acondicionamiento, secado, calidad">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de semillas, granos, oleaginosas</title>
@@ -77,13 +77,13 @@
                 <div class="service__detail mt15 mb15">
                     <div class="service__detail__text">
                         <h1 class="mb__3">Semillas</h1>
-                        <p class="introSection mt-3 mb__3">Contamos con una amplia gama de variedad de semillas de marcas líderes del mercado, somos un equipo de ingenieros agrónomos y productores, brindamos asesoramiento para cada zona de siembra específica.</p>
+                        <p class="introSection mt-3 mb__3">Contamos con una amplia gama de variedad de semillas de <strong>marcas líderes</strong> del mercado, somos un equipo de ingenieros agrónomos y productores, <strong>brindamos asesoramiento</strong> para cada zona de <strong>siembra específica</strong>.</p>
                         <a href="contacto.html" class="link__more">Contactanos <i class="bi bi-arrow-right-short size3"></i></a>
                     </div>
                     <div class="service__detail__images">
                         <div class="service__detail__img position__r">
-                            <img src="../img/semilleroCosembrar.jpeg" alt="Trasnportando Semillas" class="img__intro__circle">
-                            <img src="../img/sojaGranoCosembrar.jpeg" alt="Grano de soja" class="img__intro__rounded">
+                            <img src="../img/semilleroCosembrar.jpeg" alt="Trasnportando Semillas Cosembrar" class="img__intro__circle">
+                            <img src="../img/sojaGranoCosembrar.jpeg" alt="Grano de soja Cosembrar" class="img__intro__rounded">
                         </div>
                     </div>
                 </div>
