--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                 </div>
             </nav>
                 <video autoplay playsinline muted loop preload poster="img/2160p.png" class="video__index">
-                    <!-- <source src="img/2160p.webm" /> -->
                     <source src="img/2160p.mp4" />
                 </video>
                 <div class="header__title__index">
@@ -92,7 +91,7 @@
                 <div class="mb15 mx__5vw">
                     <div class="mb15 service__cosembrar">
                         <div class="service__cosembrar__img">
-                            <img src="img/cosechaCosembrar.jpeg" alt="Grano de cereal Cosembrar" class="service__cosembrar__img--style">
+                            <img src="img/cosechaCosembrar.jpeg" alt="Acopio cereal Cosembrar" class="service__cosembrar__img--style">
                         </div>
                         <div class="service__cosembrar__text">
                             <h2 class="mb__3 color--middle">Acondicionamiento y acopio de cereal</h2>
@@ -102,7 +101,7 @@
                     </div>
                     <div class="service__cosembrar">
                         <div class="service__cosembrar__img order__1__phone">
-                            <img src="img/fitosanitarioCosembrar.jpeg" alt="Agroinsumo soja Cosembrar" class="service__cosembrar__img--style">
+                            <img src="img/fitosanitarioCosembrar.jpeg" alt="Agroinsumo Cosembrar" class="service__cosembrar__img--style">
                         </div>
                         <div class="service__cosembrar__text order__2__phone">
                             <h2 class="mb__3 color--middle">Agroinsumos</h2>
