--- a/pages/404.html
+++ b/pages/404.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Nos dedicamos al acopio y acondicionamiento de cereales, semillas, granos, oleaginosas desde hace más de veinte años, acompañando y apoyando al productor">
-    <meta name="keywords" content="Cosembrar, acopio, semillas, granos, oleaginosas, soja, maíz, sorgo, girasol, trigo, productores, planta, equipamiento, esfuerzo, productor, acondicionamiento, secado, calidad">
+    <meta name="description" content="Cosembrar cuenta con más de 20 años de experiencia en acopio y acondicionamiento de cereales, semillas, granos, oleaginosas y venta de agroinsumo">
+    <meta name="keywords" content="Cosembrar, cultivo, cosecha, sembras, acopio, semillas, granos, oleaginosas, soja, maíz, sorgo, girasol, trigo, productores, planta, agroquimico, fitosanitario, cosecha, productor, acondicionamiento, secado, calidad">
     <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosembrar acopio de semillas, granos, oleaginosas</title>
+    <title>Cosembrar</title>
     <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -31,7 +31,7 @@
                 <div class="service__detail">
                     <div class="error__text">
                         <h1 class="mb__3">Error 404</h1>
-                        <p class="introSection mt-3 mb__3">Lo sentimos, no hemos podido encontrar la página que buscas. <br> Si sembrás contactarnos, tendras buena cosecha</p>
+                        <p class="introSection mt-3 mb__3">Lo sentimos, no hemos podido encontrar la página que buscas. <br> Si sembrás contactarnos, tendras <strong>buena cosecha</strong></p>
                         <a href="contacto.html" class="me-5 error__link__more">Contactarnos</a> <a href="../index.html" class="error__link__more">Volver al inicio</a>
                     </div>
                     <div class="error__images">
